--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -31,7 +31,15 @@ body {
         font-weight: 600
       }
       margin-left: 12px;
-      margin-right: 140px;
+      @media (max-width: 1350px) {
+        margin-right: 40px;
+      }
+      @media (max-width: 1300px) {
+        margin-right: 30px;
+      }
+      @media (min-width: 1350px) {
+        margin-right: 120px;
+      }
     }
     ._login {
       float: right;
@@ -49,13 +57,25 @@ body {
       margin-right: 12px;
     }
     > div:not(._nonTab) {
-      padding-top: 14px;
-      font-size: 20px;
+      @media (max-width: 1300px) {
+        padding-top: 16px;
+        font-size: 18px;
+        margin-right: 16px;
+      }
+      @media (max-width: 1130px) {
+        padding-top: 18px;
+        font-size: 15px;
+        margin-right: 15px;
+      }
+      @media (min-width: 1300px) {
+        padding-top: 14px;
+        font-size: 20px;
+        margin-right: 24px;
+      }
       font-weight: 500;
       position: relative;
       &.background {color: #80ceff}
       &:not(.background) {color: white}
-      margin-right: 24px;
     }
   }
   > .contents {
