--- a/code/sass/TransactionTable.css
+++ b/code/sass/TransactionTable.css
@@ -365,15 +365,16 @@ $table-stripe-backgroud: #f8f8f8;
 }
 
 ._AccountBalanceView {
-  padding-left: 8px;
+  > * {
+    margin-left: 8px;
+  }
   padding-top: 8px;
-  width: $left-width - 8;
   > ._title {
     font-size: $left-title-font-size;
     font-weight: 100;
     margin-top: 8px;
   }
-  > ._title:not(:first-child) {
+  > ._title:not(:nth-child(2)) {
     margin-top: 48px;
   }
   > ._groupName {
@@ -511,20 +512,32 @@ div._TransactionHUD {
 }
 
 ._ImportTransactions {
-  position: absolute;
-  height:   100%;
-  width:    100%;
   > ._AccountBalanceView {
-    * {color: $left-color};
-    background-color: $left-background;
-    float: left;
-    height: calc(100% - 8px);
-    &::-webkit-scrollbar { width: 0 !important };
-    border-right: $left-border;
-    overflow: scroll;
+    @include sidebar-right-sidebar(1250px, 220px)
   }
   > ._import {
+    overflow-y: scroll;
+    @include sidebar-right-main(1250px, 220px)
+  }
+}
+
+
+._ImportTransactions {
+  position:   absolute;
+  height:     100%;
+  width:      100%;
+  clear:      all;
+  overflow-y: scroll;
+  > ._AccountBalanceView {
+    * {color: #777};
+    &::-webkit-scrollbar { width: 0 !important };
+    overflow-y: scroll;
+  }
+  > ._import {
+    overflow-y: scroll;
+    clear: all;
     height: calc(100% - 8px);
+    margin-left: 10px;
     padding-left: 8px;
     padding-top: 8px;
     ._instructions, ._import_status {
@@ -539,15 +552,10 @@ div._TransactionHUD {
     ._import_status {
       color: #888;
     }
-    margin-left: 220px;
-    overflow-y: scroll;
-    clear: all;
     > div:last-child {
       margin-bottom: 1000px;  /* hack to handle pop-ups at bottom of screen gracefully */
     }
   }
-  clear: all;
-  overflow-y: scroll;
 }
 
 ._ApplyPopup {
