--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -53,3 +53,61 @@ $left-margin-sep: 20px;
     width: $wide;
   }
 }
+
+._sidebar_right {
+  right: 0;
+  height:100%;
+  z-index: 1;
+  background-color: rgba(250,250,250,.9);
+  position:fixed!important;
+  margin-top: 0px!important;
+  overflow:hidden;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  animation:animateright 0.4s;
+  @keyframes animateright{from{right:-300px;opacity:0} to{right:0;opacity:1}}
+
+  ._sidebar_right_hide_botton {
+    border:none;
+    position: absolute;
+    right:   0px;
+    top:   -16px;
+    background-color:inherit;
+    white-space:nowrap;
+    font-size: 40px;
+    font-weight: 100;
+    color: #aaa;
+    cursor:pointer;
+  }
+}
+
+._sidebar_right_show_button {
+  border:none;
+  position: fixed;
+  right: 0px;
+  background-color:inherit;
+  white-space:nowrap;
+  font-size: 20px;
+  font-weight: 100;
+  color: #ddd;
+  cursor:pointer;
+}
+
+@mixin sidebar-right-sidebar($min-width, $width) {
+  width: $width;
+  @media (min-width: $min-width - 1px) {display:block!important}
+  @media (max-width: $min-width)       {display:none}
+  ._sidebar_right_hide_botton {
+    @media (min-width: $min-width) {display:none}
+  }
+}
+
+@mixin sidebar-right-show($min-width) {
+  @media (min-width: $min-width) {display:none}
+}
+
+@mixin sidebar-right-main($min-width, $width) {
+/*  overflow: auto; */
+  @media (min-width: $min-width) {margin-right: $width}
+}
+
+
