--- a/code/sass/TransactionTable.css
+++ b/code/sass/TransactionTable.css
@@ -365,10 +365,6 @@ $table-stripe-backgroud: #f8f8f8;
 }
 
 ._AccountBalanceView {
-  > * {
-    margin-left: 8px;
-  }
-  padding-top: 8px;
   > ._title {
     font-size: $left-title-font-size;
     font-weight: 100;
@@ -382,22 +378,23 @@ $table-stripe-backgroud: #f8f8f8;
     font-size:   $left-head-font-size;
     margin-top:    32px;
     margin-bottom: 12px;
+    color: red;
   }
-  > ._tuple {
-    div {
-      font-weight: 100;
-      font-size: $left-subhead-font-size;
+  ._group {
+    > ._tuple {
+      > ._field > ._content {
+        font-weight: 100;
+        font-size: 14px;
+      }
+      ._field:nth-child(1) {
+        float: left;
+      }
+      ._field:nth-child(2) {
+        float: right;
+      }
+      clear:    all;
+      overflow: hidden;
     }
-    div:nth-child(1) {
-      float: left;
-    }
-    div:nth-child(2) {
-      float: right;
-    }
-    clear:    all;
-    overflow: hidden;
-    margin-right: 8px;
-    margin-bottom: 8px;
   }
 }
 
@@ -513,12 +510,13 @@ div._TransactionHUD {
 
 ._ImportTransactions {
   > ._AccountBalanceView {
-    @include sidebar-right-sidebar(1250px, 220px)
+    @include sidebar-right-sidebar(1250px, 220px);
   }
   > ._import {
     overflow-y: scroll;
     @include sidebar-right-main(1250px, 220px)
   }
+  @include sidebar-right-show(1250px)
 }
 
 
