--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -54,11 +54,31 @@ $left-margin-sep: 20px;
   }
 }
 
+._sidebar_group {
+  margin: 25px 8px 25px 8px;
+  background-color: rgba(254,254,254,.8);
+  border-radius: 12px;
+  box-shadow: 0px 0px 2px rgba(150,150,150,.6);
+  > * {
+    padding: 6px;
+  }
+  * {color: #777}
+  > ._heading {
+    background-color: rgba(240,240,240,.8);
+    font-size: 18px;
+    font-weight: 300;
+  }
+  > div:not(._heading) {
+    font-size: 14px;
+    font-weight: 100;
+  }
+}
+
 ._sidebar_right {
   right: 0;
   height:100%;
   z-index: 1;
-  background-color: rgba(250,250,250,.9);
+  background-color: rgba(235,235,235,.9);
   position:fixed!important;
   margin-top: 0px!important;
   overflow:hidden;
@@ -70,8 +90,8 @@ $left-margin-sep: 20px;
     border:none;
     position: absolute;
     right:   0px;
-    top:   -16px;
-    background-color:inherit;
+    top:   -18px;
+    background-color:rgba(0,0,0,0);
     white-space:nowrap;
     font-size: 40px;
     font-weight: 100;
@@ -84,6 +104,7 @@ $left-margin-sep: 20px;
   border:none;
   position: fixed;
   right: 0px;
+  top: 44px;
   background-color:inherit;
   white-space:nowrap;
   font-size: 20px;
@@ -102,12 +123,13 @@ $left-margin-sep: 20px;
 }
 
 @mixin sidebar-right-show($min-width) {
-  @media (min-width: $min-width) {display:none}
+  ._sidebar_right_show_button {
+    @media (min-width: $min-width - 1px) {display:none}
+  }
 }
 
 @mixin sidebar-right-main($min-width, $width) {
-/*  overflow: auto; */
-  @media (min-width: $min-width) {margin-right: $width}
+  @media   (min-width: $min-width) {margin-right: $width}
+  @include sidebar-right-show($min-width)
 }
-
 
