--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -85,7 +85,7 @@ body {
     height: 100%;
     > div {
       height: 100%;
-      overflow-y: scroll;
+/*      overflow-y: scroll;*/
       > div.background {
         display: none;
       }
