Fixed problems with drilling into Nav data.  Presence of "budget_" rows confused code that was checking for leafs.

--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -262,7 +262,7 @@ body {
     margin-bottom: 8px;
   }
 }
-._progressGraphs > div, ._activityMonthsGraph {
+._progressGraphs > div, ._activityMonthsGraph, ._budgetMonthsGraph {
   > ._popup, &._popup {
     > ._heading {
       > ._heading {
