--- a/code/sass/TransactionTable.css
+++ b/code/sass/TransactionTable.css
@@ -508,14 +508,14 @@ div._TransactionHUD {
   }
 }
 
-$import-width:  1250px;
-$sidebar-width: 220px;
+$import-width:  1024px;
+$import-sidebar-width: 220px;
 ._ImportTransactions > ._AccountBalanceView {
-  @include sidebar-right-sidebar($import-width, $sidebar-width);
+  @include sidebar-right-sidebar($import-width, $import-sidebar-width);
 }
 ._ImportTransactionsContents {
-  @include sidebar-right-main($import-width, $sidebar-width);
-  @include sidebar-right-show($import-width);
+  @include sidebar-right-main($import-width, $import-sidebar-width);
+  @include sidebar-right-show($import-width, $import-sidebar-width);
 }
 
 
