--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -81,18 +81,33 @@ body {
   position: relative;
 }
 
-._toolTip {
+._toolTip, ._toolTipNoPosition {
   display: none;
-  background: rgb(255,255,200);
-  color: rgb(0,0,35);
-  font-size: 10px;
-  padding: 3px 6px;
   position: absolute;
-  left: 8px;
-  top: -28px;
-  box-shadow: $drop-shadow;
+  background: rgb(255,255,200);
+  color: rgb(0,0,35)!important;
+  font-size: 11px!important;
+  padding: 3px 6px;
+  box-shadow:  0px 0px 2px rgba(0,0,0,.4);
+  white-space: nowrap;
+  z-index: 100;
+  &._toolTip {
+    left: 8px;
+    top: -20px;
+  }
+}
+
+._toolTipNew {
+  position: absolute;
+  z-index: 9999;
+  background: rgb(255,255,200);
+  color: rgb(0,0,35)!important;
+  font-size: 11px!important;
+  padding: 3px 6px;
+  box-shadow:  0px 0px 2px rgba(0,0,0,.4);
   white-space: nowrap;
 }
+
 
 ._error {
   border: 1px solid red;
@@ -373,7 +388,7 @@ body {
         border-right: 1px solid #aaa;
       }
     }
-    > ._budgetTables {
+    > ._budgetTables, > ._activityTables {
       margin-bottom: 600px;
     }
     > ._budgetTables > ._budgetTable > table,
@@ -603,8 +618,21 @@ body {
   }
 }
 
+._progressSidebar {
+  > ._sidebar_group {
+    > table {
+      > tr > td:last-child {
+        text-align: right;
+      }
+      > tr > td._showMoreLess {
+        color: #aaa;
+      }
+    }
+  }
+}
+
 $progress-min-width:     1024px;
-$progress-sidebar-width: 300px;
+$progress-sidebar-width: 260px;
 ._progressContents {
   @include sidebar-right-main($progress-min-width, $progress-sidebar-width);
   @include sidebar-right-show($progress-min-width, $progress-sidebar-width);
