--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -73,18 +73,35 @@ $left-margin-sep: 20px;
     font-weight: 100;
     margin: 8px 8px 8px 8px;
   }
+  > table {
+    padding: 2px 8px 2px 8px;
+    table-layout: fixed;
+    > tr > td {
+      padding-top:    2px;
+      padding-bottom: 2px;
+      text-overflow:  ellipsis;
+      overflow:       hidden;
+      white-space:    nowrap;
+    }
+    > tr > td:first-child {width: auto}
+    > tr > td:nth-child(2) {width: 50px;}
+    font-size: 14px;
+    font-weight: 100;
+    width: 100%;
+  }
 }
 
 ._sidebar_right {
+  overflow-y: scroll;
   right: 0px;
   height:100%;
   z-index: 1;
+  height: calc(100% - 48px);
   background-color: rgba(80,80,80,.4);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   position:fixed!important;
   margin-top: 0px!important;
-  overflow:hidden;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   animation:animateright 0.4s;
   @keyframes animateright{from{right:-300px;opacity:0} to{right:0;opacity:1}}
