--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -81,7 +81,7 @@ body {
   > .contents {
     > div {
       > div {
-        height:   100vh;
+        height:   calc(100vh - 48px);
         position: relative;
         overflow: scroll;
       }
