Add no-user-select to progress side bar.  This should be propagated to all none-input elements

--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -596,6 +596,7 @@ body {
 }
 
 ._progressSidebar {
+  @include user-select-none();
   > ._sidebar_group {
     > table {
       > tr > td:last-child {
