--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -166,3 +166,11 @@ $left-margin-sep: 20px;
   @media (min-width: $min-main-width + $sidebar-width) {width: calc(100% - #{$sidebar-width})}
 }
 
+@mixin user-select-none() {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
