Discard previous change to AmountUp that distributed amounts to prev and cur separately.  This doesn't work because a category with an excess of unspent budget gets allocated a disproportionate amount of parent UNTIL there's spending in that category.  Then, these parent amounts need to be re-distributed.
This does reintroduce the problem that cur on last day of X may not be the same as prev on first day of X+1.

--- a/code/sass/TransactionTable.css
+++ b/code/sass/TransactionTable.css
@@ -132,6 +132,10 @@ $table-stripe-backgroud: #f8f8f8;
   }
 }
 
+._TransactionHUD:not(._TransactionEdit) {
+  @include user-select(auto);
+}
+
 ._TransactionHUD > ._hudcontent > table, ._TransactionHUD > ._hudcontent > ._body > table {
   @include transaction-table-base (18px, 13px, 18px);
 }
