--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -1,7 +1,10 @@
+@import 'lib';
+
 body {
   margin: 0px;
 }
 .tabbed {
+  @include user-select(none);
   position: fixed;
   left: 0px;
   right: 0px;
