--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -169,11 +169,11 @@ $left-margin-sep: 20px;
   @media (min-width: $min-main-width + $sidebar-width) {width: calc(100% - #{$sidebar-width})}
 }
 
-@mixin user-select-none() {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+@mixin user-select($value) {
+  -webkit-touch-callout: $value;
+  -webkit-user-select: $value;
+  -khtml-user-select: $value;
+  -moz-user-select: $value;
+  -ms-user-select: $value;
+  user-select: $value;
 }
