--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -40,6 +40,7 @@ $left-margin-sep: 20px;
   padding: 8px;
   position: absolute;
   z-index: 2003;
+  background: rgba(255,255,255,0)!important;
 }
 
 @mixin popup-content() {
