--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -574,7 +574,8 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         text-align: center;
       }
       > ._suffix{
-        font-size: 28px;
+        @media (min-width: 1100px) {font-size: 28px}
+        @media (max-width: 1099px) {font-size: 20px}
         font-weight: 100;
       }
       > ._suffix {
