--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -22,7 +22,20 @@ body {
     }
     ._appName {
       padding-top: 4px;
-      font-size: 30px;
+      @media (min-width: 1300px) {
+        margin-right: 60px;
+        font-size: 30px;
+      }
+      @media (min-width: 1130px) and (max-width: 1299px) {
+        padding-top: 8px;
+        margin-right: 40px;
+        font-size: 26px;
+      }
+      @media (max-width: 1129px) {
+        padding-top: 12px;
+        margin-right: 30px;
+        font-size: 22px;
+      }
       span:nth-child(1) {
         font-style: italic;
         font-weight: 100;
@@ -34,21 +47,11 @@ body {
         font-weight: 600
       }
       margin-left: 12px;
-      @media (max-width: 1350px) {
-        margin-right: 40px;
-      }
-      @media (max-width: 1300px) {
-        margin-right: 30px;
-      }
-      @media (min-width: 1350px) {
-        margin-right: 120px;
-      }
     }
     ._login {
       float: right;
       color: #80ceff;
       padding-top: 14px;
-      font-size: 20px;
       font-weight: 300;
       span:nth-child(1), span:nth-child(2) {
         font-weight: 500;
@@ -59,21 +62,21 @@ body {
       }
       margin-right: 12px;
     }
-    > div:not(._nonTab) {
-      @media (max-width: 1300px) {
-        padding-top: 16px;
-        font-size: 18px;
-        margin-right: 16px;
-      }
-      @media (max-width: 1130px) {
-        padding-top: 18px;
-        font-size: 15px;
-        margin-right: 15px;
-      }
+    > div:not(._nonTab), ._login  {
       @media (min-width: 1300px) {
         padding-top: 14px;
+        margin-right: 22px;
         font-size: 20px;
-        margin-right: 24px;
+      }
+      @media (min-width: 1130px) and (max-width: 1299px) {
+        padding-top: 16px;
+        margin-right: 18px;
+        font-size: 18px;
+      }
+      @media (max-width: 1129px) {
+        padding-top: 18px;
+        margin-right: 12px;
+        font-size: 15px;
       }
       font-weight: 500;
       position: relative;
